bad/assign_arr_elem_bool_null.example_compiler_output
ERROR
[1mbad/assign_arr_elem_bool_null.lat:4:22: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	(new boolean[3])[1] = null;
	                    [1;32m^[m
